changed pre-commit git hook check if working

--- a/ChoreBuddies.Frontend/Layout/NavMenu.razor
+++ b/ChoreBuddies.Frontend/Layout/NavMenu.razor
@@ -22,8 +22,9 @@
 
     private string? NavMenuCssClass => collapseNavMenu ? "collapse" : null;
 
-    private void ToggleNavMenu()
-    {
+    private void ToggleNavMenu(){
         collapseNavMenu = !collapseNavMenu;
     }
 }
+
+
