--- a/ChoreBuddies.Frontend/Features/Home/Home.razor
+++ b/ChoreBuddies.Frontend/Features/Home/Home.razor
@@ -17,7 +17,7 @@ else
     HomeObject? homeObject;
     protected override async Task OnInitializedAsync()
     {
-        homeObject = await Http.GetFromJsonAsync<HomeObject>("/api/home"); //
+        homeObject = await Http.GetFromJsonAsync<HomeObject>("/api/home");
     }
     protected class HomeObject
     {
