Created main layout

--- a/ChoreBuddies.Frontend/UI/_Imports.razor
+++ b/ChoreBuddies.Frontend/UI/_Imports.razor
@@ -7,5 +7,5 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 @using ChoreBuddies.Frontend
-@using ChoreBuddies.Frontend.Layout
+@using ChoreBuddies.Frontend.UI.Layout
 @using MudBlazor
