--- a/ChoreBuddies.Frontend/UI/Layout/MainLayout.razor
+++ b/ChoreBuddies.Frontend/UI/Layout/MainLayout.razor
@@ -151,7 +151,7 @@
                     <MudButton Class="app-bar" OnClick="@(() => Navigation.NavigateTo("/support"))">Support</MudButton>
                     <MudButton Class="rounded-lg" Variant="Variant.Filled" Size="Size.Large"
                                OnClick="@(() => Navigation.NavigateTo("/login"))"
-                               Style="background-color: #5B6FE6; color: white; text-transform: none;">
+                               Style="background-color: #5B6FE6; color: white; text-transform: none; margin-left: 10px;">
                         Login
                     </MudButton>
                     <MudButton Class="app-bar" OnClick="@(() => Navigation.NavigateTo("/signup"))">Sign Up</MudButton>
@@ -274,6 +274,6 @@
 <style>
     .app-bar {
         color: #000;
-        padding: 14px;
+        padding: 20px;
     }
 </style>
