--- a/ChoreBuddies.Frontend/UI/_Imports.razor
+++ b/ChoreBuddies.Frontend/UI/_Imports.razor
@@ -9,3 +9,4 @@
 @using ChoreBuddies.Frontend
 @using ChoreBuddies.Frontend.UI.Layout
 @using MudBlazor
+@using static Microsoft.AspNetCore.Components.Web.RenderMode
