--- a/ChoreBuddies.Frontend/_Imports.razor
+++ b/ChoreBuddies.Frontend/_Imports.razor
@@ -1,12 +1,21 @@
 ﻿@using System.Net.Http
 @using System.Net.Http.Json
+@using System.ComponentModel.DataAnnotations
+
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
+@using Microsoft.AspNetCore.Components.Authorization
+@using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.JSInterop
+
+@using MudBlazor
+
 @using ChoreBuddies.Frontend
 @using ChoreBuddies.Frontend.UI.Layout
-@using MudBlazor
-@using static Microsoft.AspNetCore.Components.Web.RenderMode
+@using ChoreBuddies.Frontend.UI.Components
+@using ChoreBuddies.Frontend.Features.Authentication
+
+@using Shared.Authentication
