--- a/ChoreBuddies.Frontend/Features/Chat/HouseholdChat.razor
+++ b/ChoreBuddies.Frontend/Features/Chat/HouseholdChat.razor
@@ -4,12 +4,7 @@
 @inject IJSRuntime JSRuntime
 @implements IAsyncDisposable
 
-<MudPaper Elevation="3" Class="d-flex flex-column" Style="height: 500px; width: 100%; max-width: 600px; margin: auto;">
-    
-    <MudToolBar Dense="true" Class="mud-theme-primary">
-        <MudIcon Icon="@Icons.Material.Filled.Forum" Class="mr-2"/>
-        <MudText Typo="Typo.h6">Czat Gospodarstwa</MudText>
-    </MudToolBar>
+<div class="d-flex flex-column" style="height: 500px; width: 100%; max-width: 600px; margin: auto;">
 
     <MudPaper Class="flex-grow-1 pa-4 overflow-auto" Elevation="0" ID="chat-scroll-container">
         <MudStack Spacing="2">
@@ -27,8 +22,8 @@
                 {
                     // Chat messages alignment and color based on sender
                     var align = msg.IsMine ? Align.End : Align.Start;
-                    var color = msg.IsMine ? Color.Primary : Color.Surface;
-                    var textColor = msg.IsMine ? Color.Inherit : Color.Default;
+                    var color = msg.IsMine ? Color.Surface : Color.Primary;
+                    var textColor = msg.IsMine ? Color.Inherit : Color.Surface;
                     
                     <MudStack AlignItems="@(msg.IsMine ? AlignItems.End : AlignItems.Start)" Spacing="0">
                         @if (!msg.IsMine)
@@ -72,7 +67,7 @@
                        Disabled="@(string.IsNullOrWhiteSpace(_newMessageInput) || !ChatService.IsConnected)" />
     </MudPaper>
 
-</MudPaper>
+</div>
 
 @code {
     [Parameter] public int HouseholdId { get; set; }
@@ -84,6 +79,7 @@
 
     protected override async Task OnInitializedAsync()
     {
+        HouseholdId = 2;
         _messages = await ChatService.GetHistoryAsync(HouseholdId);
 
         ChatService.MessageReceived += HandleMessageReceived;
